modernize and cleanup, remove gwt (#64)
* modernize and cleanup, remove gwt

* removed web platform remnants and some cleanup too

* javadoc issue

---------

Co-authored-by: Zalinius <zalinius@darzalgames.com>